--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@stripe/stripe-js": "^1.15.0",
     "dotenv": "^10.0.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
@@ -15,6 +16,7 @@
     "gatsby-plugin-sharp": "^3.4.1",
     "gatsby-plugin-snipcartv3": "^2.3.3",
     "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-source-stripe": "^3.2.2",
     "gatsby-transformer-sharp": "^3.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
